--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i styles.css -o src/css/styles.css --watch"
+    "dev": "npx tailwindcss -i styles.css -o src/css/styles.css --watch",
+    "build": "npx tailwindcss-cli@latest build styles.css -o src/css/styles.css"
   },
   "keywords": [],
   "author": "",
